
	* ipmi-chassis: Remove legacy options (--get-capabilities,
	--get-status, --set-power-restore-policy, --set-power-cycle-interval,
	--set-boot-flags, --boot-type, --lock-out-reset-button, --blank-screen,
	--boot-device, --lock-keyboard, --clear-cmos, --console-redirection,
	--user-password-bypass, --force-progress-event-traps, --firmware-bios-verbosity,
	--get-boot-flags).

2020-01-28 Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Fix formatting typo that led to line not
	appearing in manpage.

2020-01-28 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/oem/intel/ipmi-sensor-and-event-code-tables-oem-intel-common-spec.h,
	libfreeipmi/sel/ipmi-sel-string-intel-xeon-common.c,
	libfreeipmi/sel/ipmi-sel-string-intel-xeon-broadwell-common.c:
	Move mirroring redundancy and some memory error macros / oem
	extensions from xeon to xeon broadwell common.  They do not belong
	in s2600bpb support.

	* libfreeipmi/include/freeipmi/spec/oem/intel/ipmi-sensor-and-event-code-tables-oem-intel-s2600bpb-spec.h,
	libfreeipmi/sel/ipmi-sel-string-intel-xeon-broadwell-common.c: add
	S2600BPB dimm OEM specific extensions.

2020-01-16 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Add
	Intel S2600BPB product id.

	* ipmi-oem/ipmi-oem-intel.c (_get_smtp_configuration_data)
	(_set_smtp_configuration_data),
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-spec.h:
	Update missing comments on motherboard support.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-spec.h:
	Remove accidental Dell sensor types included in header.

	* libfreeipmi/include/freeipmi/spec/oem: Remove unnecessary
	includes of stdint.h.

	Begin Intel OEM extensions refactoring.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-spec.h,