@@ -53,23 +53,22 @@ enum ipmi_sel_argp_option_keys
     TAIL_KEY = 166,
     CLEAR_KEY = 167,
     POST_CLEAR_KEY = 168,
-    DELETE_ALL_KEY = 169,       /* legacy */
-    DELETE_KEY = 170,
-    DELETE_RANGE_KEY = 171,
-    SYSTEM_EVENT_ONLY_KEY = 172,
-    OEM_EVENT_ONLY_KEY = 173,
-    OUTPUT_MANUFACTURER_ID_KEY = 174,
-    OUTPUT_EVENT_STATE_KEY = 175,
-    EVENT_STATE_CONFIG_FILE_KEY = 176,
-    HEX_DUMP_KEY = 177,
-    ASSUME_SYSTEM_EVENT_RECORDS_KEY = 178, /* legacy */
-    INTERPRET_OEM_DATA_KEY = 179,
-    OUTPUT_OEM_EVENT_STRINGS_KEY = 180,
-    ENTITY_SENSOR_NAMES_KEY = 181,
-    NO_SENSOR_TYPE_OUTPUT_KEY = 182,
-    COMMA_SEPARATED_OUTPUT_KEY = 183,
-    NO_HEADER_OUTPUT_KEY = 184,
-    NON_ABBREVIATED_UNITS_KEY = 185,
+    DELETE_KEY = 169,
+    DELETE_RANGE_KEY = 170,
+    SYSTEM_EVENT_ONLY_KEY = 171,
+    OEM_EVENT_ONLY_KEY = 172,
+    OUTPUT_MANUFACTURER_ID_KEY = 173,
+    OUTPUT_EVENT_STATE_KEY = 174,
+    EVENT_STATE_CONFIG_FILE_KEY = 175,
+    HEX_DUMP_KEY = 176,
+    ASSUME_SYSTEM_EVENT_RECORDS_KEY = 177, /* legacy */
+    INTERPRET_OEM_DATA_KEY = 178,
+    OUTPUT_OEM_EVENT_STRINGS_KEY = 179,
+    ENTITY_SENSOR_NAMES_KEY = 180,
+    NO_SENSOR_TYPE_OUTPUT_KEY = 181,
+    COMMA_SEPARATED_OUTPUT_KEY = 182,
+    NO_HEADER_OUTPUT_KEY = 183,
+    NON_ABBREVIATED_UNITS_KEY = 184,
   };
 
 struct ipmi_sel_arguments
